# tdd

./: Dockerfile  Dockerfile.prod  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
tdd/: config.py  db.py  main.py
tdd/api/: crud.py  ping.py  summaries.py
tests/: conftest.py  test_ping.py  test_summaries.py
workflows/: main.yml
